--- a/A_dbms/templates/dbms/provide/modl/provide-add-mod.html
+++ b/A_dbms/templates/dbms/provide/modl/provide-add-mod.html
@@ -13,6 +13,7 @@
             <div class="modal-body">
                 <form class="form-horizontal">
                     {% include 'dbms/provide/modl/mod_form/provide-add.html' %}
+                    {% include 'dbms/provide/modl/mod_form/provide-add-ex.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
