--- a/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry-p.html
@@ -1,6 +1,8 @@
 <div class="panel-body row">
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         客户名称：{{ custom_obj.short_name }}
+        <a style="color: red" target="_blank"
+                       href="https://www.tianyancha.com/search?key={{ custom_obj.name }}">天眼</a>
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         客户类型：{{ custom_obj.get_genre_display }}
