--- a/A_dbms/templates/dbms/report/meeting/fication-list.html
+++ b/A_dbms/templates/dbms/report/meeting/fication-list.html
@@ -8,8 +8,8 @@
 {% endblock %}
 {% block  body %}
     <div style="width: 310mm; margin-left: auto; margin-right: auto;">
-        {% comment %} <div style="font-size: large" align="center"><strong>成都武侯中小企业融资担保有限责任公司</strong></div> {% endcomment %}
-        <div style="font-size: large" align="center"><strong>成都武侯武兴小额贷款有限责任公司</strong></div>
+        <div style="font-size: large" align="center"><strong>成都武侯中小企业融资担保有限责任公司</strong></div>
+        {% comment %} <div style="font-size: large" align="center"><strong>成都武侯武兴小额贷款有限责任公司</strong></div> {% endcomment %}
         <div style="font-size: large" align="center"><strong>{{ PAGE_TITLE }}</strong></div>
         <div>
             <table>
