--- a/A_dbms/templates/dbms/report/balance_custom/article-class.html
+++ b/A_dbms/templates/dbms/report/balance_custom/article-class.html
@@ -2,6 +2,7 @@
     <td style="padding: 0;" align="center" colspan="2">合计（户均）（万元）</td>
     <td style="padding: 0;" align="right">{{ article_count }}</td>
     <td style="padding: 0;" align="right">{{ c_credit_w|floatformat:2 }}({{ s_credit|floatformat:2 }})</td>
+    <td style="padding: 0;" align="right">{{ c_g_value_w|floatformat:2 }}({{ s_g_value|floatformat:2 }})</td>
     <td style="padding: 0;" align="right">{{ c_flow_w|floatformat:2 }}({{ s_flow|floatformat:2 }})</td>
     <td style="padding: 0;" align="right">{{ c_accept_w|floatformat:2 }}({{ s_accept|floatformat:2 }})</td>
     <td style="padding: 0;" align="right">{{ c_back_w|floatformat:2 }}({{ s_back|floatformat:2 }})</td>
