--- a/A_dbms/templates/dbms/report/balance_custom/top-custom.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-custom.html
@@ -2,6 +2,7 @@
     <td style="padding: 0" align="center">合计</td>
     <td style="padding: 0" align="right">{{ c_custom_count }}</td>
     <td style="padding: 0" align="right">{{ c_credit|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_g_value|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_flow|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_accept|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_back|floatformat:2 }}</td>
@@ -14,6 +15,7 @@
     <td style="padding: 0" align="center">总计</td>
     <td style="padding: 0" align="right">{{ t_custom_count }}</td>
     <td style="padding: 0" align="right">{{ t_credit|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_g_value|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_flow|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_accept|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_back|floatformat:2 }}</td>
@@ -26,6 +28,7 @@
     <td style="padding: 0" align="center">占比（%）</td>
     <td style="padding: 0" align="right">{{ r_custom_count }}</td>
     <td style="padding: 0" align="right">{{ r_credit }}</td>
+    <td style="padding: 0" align="right">{{ r_g_value }}</td>
     <td style="padding: 0" align="right">{{ r_flow }}</td>
     <td style="padding: 0" align="right">{{ r_accept }}</td>
     <td style="padding: 0" align="right">{{ r_back }}</td>
