--- a/A_dbms/templates/dbms/report/balance_custom/balance-class-fication.html
+++ b/A_dbms/templates/dbms/report/balance_custom/balance-class-fication.html
@@ -4,13 +4,16 @@
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
-            <th>风险分类</th>
-            <th>放款笔数</th>
-            <th>续贷金额</th>
-            <th>新增金额</th>
-            <th>发放总额</th>
-            <th>还款金额</th>
-            <th>在保余额</th>
+            <th>区域</th>
+            <th>项目数</th>
+            <th>授信总额</th>
+            <th>反担保价值</th>
+            <th>流贷余额</th>
+            <th>承兑余额</th>
+            <th>保函余额</th>
+            <th>委贷余额</th>
+            {#            <th>小贷余额</th>#}
+            <th>在保总额</th>
         </tr>
         </thead>
         <tbody>
@@ -51,6 +54,7 @@
                 </td>
                 <td style="padding: 0;" align="right">{{ item.con }}</td>
                 <td style="padding: 0;" align="right">{{ item.credit_amount|floatformat:2 }}</td>
+                <td style="padding: 0;" align="right">{{ item.g_value|floatformat:2 }}</td>
                 <td style="padding: 0;" align="right">{{ item.custom_flow|floatformat:2 }}</td>
                 <td style="padding: 0;" align="right">{{ item.custom_accept|floatformat:2 }}</td>
                 <td style="padding: 0;" align="right">{{ item.custom_back|floatformat:2 }}</td>
