--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -8,6 +8,7 @@
             <th>风控专员</th>
             <th>授信总额</th>
             <th>反担保价值</th>
+            <th>覆盖率</th>
             <th>在保余额</th>
 {#            <th>流贷余额</th>#}
 {#            <th>承兑余额</th>#}
@@ -36,6 +37,7 @@
                 <td align="right">{{ custom.controler }}</td>
                 <td align="right">{{ custom.credit_amount }}</td>
                 <td align="right">{{ custom.g_value }}</td>
+                <td align="right">{{ custom.g_radio }}</td>
                 <td align="right">{{ custom.amount }}</td>
 {#                <td align="right">{{ custom.custom_flow }}</td>#}
 {#                <td align="right">{{ custom.custom_accept }}</td>#}
