--- a/A_dbms/templates/dbms/report/balance_custom/top-custom.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-custom.html
@@ -3,6 +3,7 @@
     <td style="padding: 0" align="right">{{ c_custom_count }}</td>
     <td style="padding: 0" align="right">{{ c_credit|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_g_value|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_g_radio|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_flow|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_accept|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_back|floatformat:2 }}</td>
@@ -16,6 +17,7 @@
     <td style="padding: 0" align="right">{{ t_custom_count }}</td>
     <td style="padding: 0" align="right">{{ t_credit|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_g_value|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_g_radio|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_flow|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_accept|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_back|floatformat:2 }}</td>
@@ -29,6 +31,7 @@
     <td style="padding: 0" align="right">{{ r_custom_count }}</td>
     <td style="padding: 0" align="right">{{ r_credit }}</td>
     <td style="padding: 0" align="right">{{ r_g_value }}</td>
+    <td style="padding: 0" align="right">{{ r_g_radio }}</td>
     <td style="padding: 0" align="right">{{ r_flow }}</td>
     <td style="padding: 0" align="right">{{ r_accept }}</td>
     <td style="padding: 0" align="right">{{ r_back }}</td>
