--- a/A_dbms/templates/dbms/agree/extra/js-agree-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-add.html
@@ -80,6 +80,7 @@
                     } else {
                         alert(arg.message);
                         $('#e_agree_rate').text(arg.forme.agree_rate);
+                        $('#e_investigation_fee').text(arg.forme.investigation_fee);
                         $('#e_agree_amount').text(arg.forme.agree_amount);
                         $('#e_amount_limit').text(arg.forme.amount_limit);
                         $('#e_letter_typ').text(arg.forme.letter_typ);
