--- a/A_dbms/templates/dbms/agree/modl/mod_form/agree-edit.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/agree-edit.html
@@ -24,6 +24,11 @@
         <div class="col-sm-9">{{ form_agree_edit.agree_rate }}</div>
         <label id="e_agree_rate" class="pull-right">{{ form_agree_edit.agree_rate.errors }}</label>
     </div>
+    <div class="form-group"><!--费率-->
+        <label for="id_investigation_fee" class="col-sm-3 control-label">{{ form_agree_edit.investigation_fee.label }}：</label>
+        <div class="col-sm-9">{{ form_agree_edit.investigation_fee }}</div>
+        <label id="e_investigation_fee" class="pull-right">{{ form_agree_edit.investigation_fee.errors }}</label>
+    </div>
     <div class="form-group"><!--期限-->
         <label for="id_agree_term" class="col-sm-3 control-label">{{ form_agree_edit.agree_term.label }}：</label>
         <div class="col-sm-9">{{ form_agree_edit.agree_term }}</div>
