--- a/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
@@ -15,6 +15,8 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     费率（%）：{{ agree_obj.agree_rate }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    调查费（%）：{{ agree_obj.investigation_fee }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     期限（月）：{{ agree_obj.agree_term }}</label>
 {% if PAGE_TITLE == '合同详情' %}
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
