--- a/A_dbms/templates/dbms/report/balance_custom/top-custom.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-custom.html
@@ -31,7 +31,7 @@
     <td style="padding: 0" align="right">{{ r_custom_count }}</td>
     <td style="padding: 0" align="right">{{ r_credit }}</td>
     <td style="padding: 0" align="right">{{ r_g_value }}</td>
-    <td style="padding: 0" align="right">{{ r_g_radio }}</td>
+    <td style="padding: 0" align="right"> </td>
     <td style="padding: 0" align="right">{{ r_flow }}</td>
     <td style="padding: 0" align="right">{{ r_accept }}</td>
     <td style="padding: 0" align="right">{{ r_back }}</td>
