--- a/A_dbms/templates/dbms/agree/extra/js-agree-edit.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-edit.html
@@ -76,6 +76,7 @@
                     } else {
                         alert(arg.message);
                         $('#e_agree_amount').text(arg.forme.agree_amount);
+                        $('#e_investigation_fee').text(arg.forme.investigation_fee);
                         $('#e_amount_limit').text(arg.forme.amount_limit);
                     }
                 }
