--- a/A_dbms/templates/dbms/agree/scan/agree-summry.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry.html
@@ -2,9 +2,13 @@
     <div class="panel-heading">
         <label>合同情况</label>
         <label class="navbar-right">
-            <a class="btn btn-danger btn-sm " id="sub">提交</a>
-            <a class="btn btn-primary btn-sm" target="_blank"
-               href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">预览 </a>
+            {% comment %} <a class="btn btn-danger btn-sm " id="sub">提交</a> {% endcomment %}
+            <a class="btn btn-success btn-sm" target="_blank"
+               href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">合同预览</a>
+            {%if agree_obj.investigation_fee > 0 %}
+                <a class="btn btn-success btn-sm" target="_blank"
+                href="{% url 'dbms:agree_supple_preview' agree_id=agree_obj.id %}">补充协议</a>
+            {% endif %}
             <a class="btn btn-primary btn-sm" target="_blank"
                href="{% url 'dbms:agree_sign_preview' agree_id=agree_obj.id %}">审签表</a>
             <a class="btn btn-primary btn-sm " id="addCounterB">添加反担保</a>
