--- a/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
+++ b/A_dbms/templates/dbms/agree/scan/tab/agree-counters.html
@@ -225,10 +225,10 @@
                     {% else %}
                         ？？？？？
                     {% endif %}
-                    <td><a class="btn btn-primary btn-xs" target="_blank"
+                    <td><a class="btn btn-success btn-xs" target="_blank"
                            href="{% url 'dbms:agree_counter_preview' agree_id=agree_obj.id counter_id=counter.id %}">
                         预览</a>
-                        <a class="btn btn-primary btn-xs delCounterB">删除</a></td>
+                        <a class="btn btn-danger btn-xs delCounterB">删除</a></td>
                 {% elif PAGE_TITLE == '风控落实' %}
                     <td>{{ counter.counter_sign_date|default_if_none:'' }}</td>
                     <td>{{ counter.get_counter_state_display|default_if_none:'' }}</td>
