--- a/A_dbms/templates/dbms/report/balance_custom/top-custom.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-custom.html
@@ -10,6 +10,7 @@
     <td style="padding: 0" align="right">{{ c_entrusted|floatformat:2 }}</td>
     {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
     <td style="padding: 0" align="right">{{ c_amount|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ c_v_radio|floatformat:2 }}</td>
 </tr>
 
 <tr>
@@ -24,6 +25,7 @@
     <td style="padding: 0" align="right">{{ t_entrusted|floatformat:2 }}</td>
     {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
     <td style="padding: 0" align="right">{{ t_amount|floatformat:2 }}</td>
+    <td style="padding: 0" align="right">{{ t_v_radio|floatformat:2 }}</td>
 </tr>
 
 <tr>
@@ -38,6 +40,7 @@
     <td style="padding: 0" align="right">{{ r_entrusted }}</td>
     {#    <td align="right">{{ c_petty|floatformat:2 }}</td>#}
     <td style="padding: 0" align="right">{{ r_amount }}</td>
+    <td style="padding: 0" align="right"> </td>
 </tr>
 
 
