--- a/A_dbms/templates/dbms/provide/agree/scan/provide-agree-summry.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/provide-agree-summry.html
@@ -3,7 +3,7 @@
         <label>合同情况</label>
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm " id="signAllB">一键签所有合同</a>
-            <a class="btn btn-primary btn-sm " id="signAgreeB">签合同</a>
+            {% comment %} <a class="btn btn-primary btn-sm " id="signAgreeB">签合同</a> {% endcomment %}
             <a class="btn btn-primary btn-sm " id="addAscertainB">风控落实</a>
             <a class="btn btn-primary btn-sm " id="addNotifyB">放款通知</a>
             <a class="btn btn-primary btn-sm " id="changeAgreeState">变更状态</a>
