--- a/A_dbms/templates/dbms/report/balance_custom/top-class.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-class.html
@@ -1,7 +1,11 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
         {% if t_typ == 99 %}
-            <caption>{{ c_typ_c }}金额{{ screen_value|floatformat:0 }}元以上（含）客户及占比统计表（截止日：{{ td }}）</caption>
+            {% if screen_value %}
+                <caption>{{ c_typ_c }}金额{{ screen_value|floatformat:0 }}元以上（含）客户及占比统计表（截止日：{{ td }}）</caption>
+            {% else %}
+                <caption>{{ c_typ_c }}客户及占比统计表（截止日：{{ td }}）</caption>
+            {% endif %}
         {% else %}
             <caption>{{ t_typ_t }}{{ c_typ_c }}客户及占比统计表（截止日：{{ td }}）</caption>
         {% endif %}
