--- a/A_dbms/templates/dbms/agree/preview-supplementary.html
+++ b/A_dbms/templates/dbms/agree/preview-supplementary.html
@@ -27,7 +27,7 @@
                     <p>系统没有相关模板，请联系管理员！！！！！！</p>
                 {%endif%}
             </div>
-            {% include 'dbms/agree/extra/js-view-save-supplementary.html' %}----
+            {% include 'dbms/agree/extra/js-view-save-supplementary.html' %}
         {% else %}
             {{ agree_obj.supplementary|safe }}
         {% endif %}
