--- a/A_dbms/templates/dbms/report/balance_custom/balance-class-controlor.html
+++ b/A_dbms/templates/dbms/report/balance_custom/balance-class-controlor.html
@@ -16,7 +16,7 @@
             <th>在保总额</th>
         </tr>
         </thead>
-        <tbody>g_value
+        <tbody>
         {% for item in article_balance_control %}
             <tr style="padding: 0;">
                 <td style="padding: 0;">{{ forloop.counter }}</td>
