--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
@@ -3,7 +3,7 @@
 <p>2）担保品种为银行承兑汇票时，三个月期限承兑每次按担保总额的<u>&nbsp&nbsp&nbsp</u>/年一次性收取，6个月期限承兑每次按担保总额的<u>&nbsp&nbsp&nbsp</u>/年/次收取；</p>
 <p>3）担保品种为保函时：A、按次收取：每次按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>%收取；B、按担保时间收取：每月按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>% 收取。C、按年收取：每年按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>%收取；</p>
 {% if rate_b %}
-    <p>4）按以下约定执行：担保品种为贷款或承兑汇票的担保综合费，期限三个月以内（含）费率为1%；期限三个月到六个月（含）费率为1.5%；期限六个月到一年（含）费率为<u>{{ single_quota_rate }}%</u>。</p>
+    <p>4）按以下约定执行：担保品种为贷款或承兑汇票的担保综合费，期限三个月以内（含）费率为1%；期限三个月到六个月（含）费率为1.5%；期限六个月到九个月（含）费率为2%；期限九个月到一年（含）费率为<u>{{ single_quota_rate }}%</u>。</p>
 {% else %}
     <p>4）按以下约定执行：<strong><u>{{ single_quota_rate }}</u></strong></p>
 {% endif %}
