--- a/A_dbms/templates/dbms/agree/preview-mortgage_app.html
+++ b/A_dbms/templates/dbms/agree/preview-mortgage_app.html
@@ -2,13 +2,9 @@
 {% load static %}
 {% block title %}{{ agree_obj.agree_num }}{% endblock %}
 {% block extra-css %}
-    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-sign-style.css' %}">
-    <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-sign-style.css' %}">
+    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-mortgage-style.css' %}">
+    <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-mortgage-style.css' %}">
 {% endblock %}
 {% block body %}
-    <p>？？？？？？？？？？？？？</>
-    <p>？？？？？？？？？？？？？</>
-    <p>？？？？？？？？？？？？？</>
-    <p>？？？？？？？？？？？？？</>
-    <p>？？？？？？？？？？？？？</>
+    {% include 'dbms/agree/mortgage/mortgage_1.html' %}
 {% endblock %}
