--- a/A_dbms/templates/dbms/agree/mortgage/mortgage_1.html
+++ b/A_dbms/templates/dbms/agree/mortgage/mortgage_1.html
@@ -1,128 +1,153 @@
 <div class="sign-tab">
     <div class="split">
-        <div style="font-size: 20pt">
+        <div style="font-size: 23pt">
             <p align="center"><strong>不动产抵押申请书</strong></p>
         </div>
         <table>
            <tr>
-                <td class="cc" rowspan="2" style={}>收件</td>
-                <td class="cc">受理号</td>
-                <td></td>
-                <td class="cc">收件人</td>
-                <td></td>
+                <td class="cc" rowspan="2" style="width: 10%">收件</td>
+                <td class="cc" style="width: 20%">受理号</td>
+                <td style="width: 35%"></td>
+                <td class="cc" style="width: 15%">收件人</td>
+                <td style="width: 20%"></td>
             </tr> 
             <tr>
                 <td class="cc">业务编号</td>
                 <td></td>
                 <td class="cc">日期</td>
                 <td></td>
-            </tr> 
+            </tr>
+        </table>
+        <table style="margin-top:6pt">
             <tr>
                 <td class="cc">申请登记事由</td>
                 <td colspan="4">
-                <p>□抵押权预告登记  □预购商品房预告登记   □一般抵押权登记  □最高额抵押权登记  □在建工程抵押登记 □抵押权变更登记  □抵押权转移登记  □抵押权更正登记   □最高额抵押权确定登记  □抵押权异议登记     □抵押权注销登记   </p>
+                □抵押权预告登记  □预购商品房预告登记   □一般抵押权登记  □最高额抵押权登记  □在建工程抵押登记 □抵押权变更登记  □抵押权转移登记  □抵押权更正登记   □最高额抵押权确定登记  □抵押权异议登记     □抵押权注销登记
                 </td>
             </tr> 
             <tr>
-                <td class="cc" rowspan="6">申请人情况</td>
+                <td class="cc" rowspan="6" style="width: 10%">申请人情况</td>
                 <td class="cc">抵押权人姓名（名称）</td>
-                <td colspan="3"></td>
+                <td class="cc" colspan="3">{{UN}}</td>
             </tr> 
             <tr>
-                <td class="cc">证件号码</td>
-                <td></td>
-                <td class="cc">联系电话</td>
-                <td></td>
+                <td class="cc" style="width: 20%">证件号码</td>
+                <td class="cc" style="width: 35%"></td>
+                <td class="cc" style="width: 15%">联系电话</td>
+                <td class="cc" style="width: 20%"></td>
             </tr> 
             <tr>
                 <td class="cc">代理人姓名</td>
-                <td></td>
+                <td class="cc"></td>
                 <td class="cc">联系电话</td>
-                <td></td>
+                <td class="cc"></td>
             </tr> 
             <tr>
                 <td class="cc">抵押人姓名（名称）</td>
-                <td colspan="3"></td>
+                <td class="cc" colspan="3">
+                    {% for ownership in warrant_obj.ownership_warrant.all %}
+                        {% if forloop.first %}
+                            {{ ownership.owner.name }}
+                        {% else %}
+                            、{{ ownership.owner.name }}
+                        {% endif %}
+                    {% endfor %}
+                </td>
             </tr> 
             <tr>
                 <td class="cc">证件号码</td>
-                <td></td>
+                <td class="cc"></td>
                 <td class="cc">联系电话</td>
-                <td></td>
+                <td class="cc"></td>
             </tr> 
             <tr>
                 <td class="cc">代理人姓名</td>
-                <td></td>
+                <td class="cc"></td>
                 <td class="cc">联系电话</td>
-                <td></td>
+                <td class="cc"></td>
             </tr> 
             <tr>
                 <td class="cc" rowspan="3">不动产情况</td>
-                <td class="cc">债务人</td>
-                <td colspan="3"></td>
+                <td class="cc">坐落</td>
+                <td class="cc" colspan="3">{{ warrant_obj.house_warrant.house_locate }}</td>
             </tr> 
             </tr> 
             <tr>
                 <td class="cc">不动产单元号（或权属证书号）</td>
-                <td></td>
+                <td class="cc">
+                    {% for ownership in warrant_obj.ownership_warrant.all %}
+                        {% if forloop.first %}
+                            {{ ownership.ownership_num }}
+                        {% else %}
+                            、{{ ownership.ownership_num }}
+                        {% endif %}
+                    {% endfor %}
+                </td>
                 <td class="cc">不动产类型</td>
-                <td></td>
+                <td class="cc"></td>
             </tr> 
             <tr>
                 <td class="cc">面积（平方米）</td>
-                <td></td>
+                <td class="cc">{{ warrant_obj.house_warrant.house_area }}</td>
                 <td class="cc">用途</td>
-                <td></td>
+                <td class="cc"></td>
             </tr> 
             <tr>
                 <td class="cc" rowspan="3">抵押情况</td>
                 <td class="cc">被担保债权数额（最高债权数额）</td>
-                <td></td>
+                <td class="cc">{{ agree_amount_str }}万元</td>
                 <td class="cc">债务履行期限（债权确定期间）</td>
-                <td></td>
+                <td class="cc">{{ agree_obj.agree_start_date }}-{{ agree_obj.agree_due_date }}</td>
             </tr> 
             <tr>
                 <td class="cc">抵押担保范围</td>
-                <td colspan="3">详见合同</td>
+                <td class="cc" colspan="3">详见合同</td>
             </tr> 
             <tr>
                 <td class="cc">债务人</td>
-                <td colspan="3"></td>
+                <td class="cc" colspan="3">
+                    {{ agree_obj.lending.summary.custom.name }}
+                    {% if agree_obj.lending.summary.borrower.all %}
+                        {% for borrower in agree_obj.lending.summary.borrower.all %}
+                            、{{ borrower.name }}
+                        {% endfor %}
+                    {% endif %}    
+                </td>
             </tr> 
             <tr>
                 <td class="cc">附记</td>
-                <td colspan="4"></td>
+                <td class="cc" colspan="4"></td>
             </tr> 
             <tr>
-                <td class="cc" rowspan="2">询问笔录</td>
+                <td class="cc" rowspan="2">询问</br>笔录</td>
                 <td class="cc" colspan="2">抵押权人询问笔录</td>
                 <td class="cc" colspan="2">抵押人询问笔录</td>
             </tr> 
             <tr>
                 <td colspan="2">
                 <div>1.是否为真实意思表示？</div>
-                <div>□ 是     □ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
                 <div>2.是否为共有房屋？</div>
-                <div>□ 是     □ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
                 <div>3.是否分别持证？</div>
-                <div>□ 是     □ 否</divp>
-                <div>4.其他询问事项：</div>
+                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>4.其他询问事项：</br></br></div>
                 </td>
                 <td colspan="2">
                 <div>1.是否为真实意思表示？</div>
-                <div>□ 是     □ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
                 <div>2.是否为共有房屋？</div>
-                <div>□ 是     □ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
                 <div>3.是否分别持证？</div>
-                <div>□ 是     □ 否</div>
-                <div>4.其他询问事项：</div>
+                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>4.其他询问事项：</br></br></div>
                 </td>
             </tr> 
             <tr>
                 <td colspan="6">
-                <p>本申请人对填写的上述内容及提交的申请材料的真实性负责。如有不实，申请人愿承担法责任。</p>
-                <p>抵押人（代理人）： 抵押权人（代理人）：</p>
-                <p>年   月   日</p>
+                <p>&nbsp本申请人对填写的上述内容及提交的申请材料的真实性负责。如有不实，申请人愿承担法责任。</br></br></br></p>
+                <p>&nbsp&nbsp&nbsp抵押人（代理人）： &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp抵押权人（代理人）：</br></br></p>
+                <p style="margin-left:320pt">年&nbsp&nbsp月&nbsp&nbsp日</p>
                 </td>
             </tr> 
         </table>
