--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-house.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-house.html
@@ -66,7 +66,7 @@
                         {% if PAGE_TITLE == '合同详情' %}
                             <td>
                                 <a class="btn btn-success btn-xs MortgageAppB" target="_blank" href="{% url 'dbms:agree_mortgage_preview' agree_id=agree_obj.id warrant_id=warrant.id %}">抵押申请</a>
-                                <a class="btn btn-success btn-xs LetterKnowingB">知晓函</a>
+                                <a class="btn btn-success btn-xs LetterKnowingB" target="_blank" href="{% url 'dbms:agree_letter_preview' agree_id=agree_obj.id warrant_id=warrant.id %}">知晓函</a>
                             </td>
                         {% endif %}
                     </tr>
