--- a/A_dbms/templates/dbms/agree/mortgage/mortgage_1.html
+++ b/A_dbms/templates/dbms/agree/mortgage/mortgage_1.html
@@ -22,7 +22,7 @@
             <tr>
                 <td class="cc">申请登记事由</td>
                 <td colspan="4">
-                □抵押权预告登记  □预购商品房预告登记   □一般抵押权登记  □最高额抵押权登记  □在建工程抵押登记 □抵押权变更登记  □抵押权转移登记  □抵押权更正登记   □最高额抵押权确定登记  □抵押权异议登记     □抵押权注销登记
+                □抵押权预告登记&nbsp&nbsp□预购商品房预告登记&nbsp&nbsp□一般抵押权登记&nbsp&nbsp□最高额抵押权登记&nbsp&nbsp□在建工程抵押登记&nbsp&nbsp□抵押权变更登记&nbsp&nbsp□抵押权转移登记&nbsp&nbsp□抵押权更正登记&nbsp&nbsp□最高额抵押权确定登记&nbsp&nbsp□抵押权异议登记&nbsp&nbsp□抵押权注销登记
                 </td>
             </tr> 
             <tr>
@@ -109,20 +109,20 @@
             <tr>
                 <td colspan="2">
                 <div>1.是否为真实意思表示？</div>
-                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp□ 否</div>
                 <div>2.是否为共有房屋？</div>
-                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp□ 否</div>
                 <div>3.是否分别持证？</div>
-                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp□ 否</div>
                 <div>4.其他询问事项：</br></br></div>
                 </td>
                 <td colspan="2">
                 <div>1.是否为真实意思表示？</div>
-                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp□ 否</div>
                 <div>2.是否为共有房屋？</div>
-                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp□ 否</div>
                 <div>3.是否分别持证？</div>
-                <div>□ 是&nbsp&nbsp&nbsp&nbsp□ 否</div>
+                <div>□ 是&nbsp&nbsp&nbsp□ 否</div>
                 <div>4.其他询问事项：</br></br></div>
                 </td>
             </tr> 
