--- a/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
@@ -1,9 +1,9 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation">
+        {% comment %} <li role="presentation">
             <a href="#provide-article" style="background-color: #f5f5f5" aria-controls="home" role="tab"
-               data-toggle="tab">项目情况 </a></li>
+               data-toggle="tab">项目情况 </a></li> {% endcomment %}
         <li role="presentation" class="active">
             <a href="#provide-repayment" style="background-color: #f5f5f5" aria-controls="home" role="tab"
                data-toggle="tab">还款 </a></li>
@@ -34,8 +34,8 @@
 
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="presentation" class="tab-pane" id="provide-article"> <!--项目情况-->
-            {% include 'dbms/provide/scan/tab/provide-article.html' %} </div>
+        {% comment %} <div role="presentation" class="tab-pane" id="provide-article"> <!--项目情况-->
+            {% include 'dbms/provide/scan/tab/provide-article.html' %} </div> {% endcomment %}
         <div role="presentation" class="tab-pane active" id="provide-repayment"> <!--还款-->
             {% include 'dbms/provide/scan/tab/provide-repayment.html' %} </div>
         <div role="presentation" class="tab-pane" id="fication"> <!--分类-->
