--- a/A_dbms/templates/dbms/provide/provide_scan/provide-summry-body.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-summry-body.html
@@ -20,6 +20,8 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     还款金额：{{ provide_obj.provide_repayment_sum }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    还款方式：{{ provide_obj.notify.agree.get_repay_method_display }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     在保余额：{{ provide_obj.provide_balance }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     归档情况：{{ provide_obj.get_implement_display }}</label>
