--- a/A_dbms/templates/dbms/provide/modl/mod_form/track-plan-add.html
+++ b/A_dbms/templates/dbms/provide/modl/mod_form/track-plan-add.html
@@ -17,5 +17,11 @@
         <div class="col-sm-9">{{ form_track_plan.proceed }}</div>
         <label id="e_proceed" class="pull-right">{{ form_track_plan.proceed.errors }}</label>
     </div>
+    <div class="form-group"><!--分期还本-->
+        <label for="id_term_pri"
+               class="col-sm-3 control-label">{{ form_track_plan.term_pri.label }}：</label>
+        <div class="col-sm-9">{{ form_track_plan.term_pri }}</div>
+        <label id="e_term_pri" class="pull-right">{{ form_track_plan.term_pri.errors }}</label>
+    </div>
 
 </div>
