--- a/A_dbms/templates/dbms/provide/provide-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-scan.html
@@ -12,6 +12,9 @@
         {% include 'dbms/provide/modl/track-plan-mod.html' %}
         {% include 'dbms/provide/modl/track-add-mod.html' %}
         {% include 'dbms/provide/modl/track-del-mod.html' %}
+
+        {% include 'dbms/provide/modl/repay-plan-mod.html' %}
+
         {% include 'dbms/dun/modl/compensatory-add-mod.html' %}
 
         {% include 'dbms/provide/modl/extension-add-mod.html' %}
@@ -28,6 +31,9 @@
     {% include 'dbms/provide/extra/js-track-plan-add.html' %}
     {% include 'dbms/provide/extra/js-track-add.html' %}
     {% include 'dbms/provide/extra/js-track-del.html' %}
+
+    {% include 'dbms/provide/extra/js-repay-plan-add.html' %}
+
     {% include 'dbms/dun/extra/js-compensatory-add.html' %}
 
     {% include 'dbms/provide/extra/js-provide-state-change.html' %}
