--- a/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
@@ -22,7 +22,7 @@
         {% if provide_obj.track_provide.all %}
             <li role="presentation">
                 <a href="#track" style="background-color: #f5f5f5" aria-controls="home" role="tab"
-                   data-toggle="tab">跟踪事项 </a></li>
+                   data-toggle="tab">还款计划 </a></li>
         {% endif %}
         {% if provide_obj.compensatory_provide.all %}
             <li role="presentation">
