--- a/A_dbms/templates/dbms/provide/repay_plan/repay-plan-25.html
+++ b/A_dbms/templates/dbms/provide/repay_plan/repay-plan-25.html
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td class="cc">序号</td>
-                <td class="cc">收息日期</td>
+                <td class="cc">收息/还本日期</td>
                 <td class="cc">本金</td>
                 <td class="cc">利息</td>
                 <td class="cc">月还款额</td>
