--- a/A_dbms/templates/dbms/provide/modl/mod_form/track-add.html
+++ b/A_dbms/templates/dbms/provide/modl/mod_form/track-add.html
@@ -1,10 +1,28 @@
 <div id="form_track_add">
-
-    <div class="form-group"><!--跟踪情况-->
-        <label for="id_condition"
-               class="col-sm-3 control-label">{{ form_track_add.condition.label }}：</label>
-        <div class="col-sm-9">{{ form_track_add.condition }}</div>
-        <label id="e_condition" class="pull-right">{{ form_track_add.condition.errors }}</label>
+    <div class="form-group"><!--本金-->
+        <label for="id_ex_pried" class="col-sm-3 control-label">{{ form_track_add.ex_pried.label }}：</label>
+        <div id="id_ex_pried" class="col-sm-9">{{ form_track_add.ex_pried }}</div>
+        <label id="e_ex_pried" class="pull-right">{{ form_track_add.ex_pried.errors }}</label>
+    </div>
+    <div class="form-group"><!--利息-->
+        <label for="id_ex_inted" class="col-sm-3 control-label">{{ form_track_add.ex_inted.label }}：</label>
+        <div id="id_ex_inted" class="col-sm-9">{{ form_track_add.ex_inted }}</div>
+        <label id="e_ex_inted" class="pull-right">{{ form_track_add.ex_inted.errors }}</label>
+    </div>
+    <div class="form-group"><!--违约金-->
+        <label for="id_ex_pened" class="col-sm-3 control-label">{{ form_track_add.ex_pened.label }}：</label>
+        <div id="id_ex_pened" class="col-sm-9">{{ form_track_add.ex_pened }}</div>
+        <label id="e_ex_pened" class="pull-right">{{ form_track_add.ex_pened.errors }}</label>
+    </div>
+    <div class="form-group"><!--日期-->
+        <label for="id_ex_track_date" class="col-sm-3 control-label">{{ form_track_add.ex_track_date.label }}：</label>
+        <div id="id_ex_track_date" class="col-sm-9">{{ form_track_add.ex_track_date }}</div>
+        <label id="e_ex_track_date" class="pull-right">{{ form_track_add.ex_track_date.errors }}</label>
+    </div>
+    <div class="form-group"><!--备注-->
+        <label for="id_ex_condition" class="col-sm-3 control-label">{{ form_track_add.ex_condition.label }}：</label>
+        <div id="id_ex_condition" class="col-sm-9">{{ form_track_add.ex_condition }}</div>
+        <label id="e_ex_condition" class="pull-right">{{ form_track_add.ex_condition.errors }}</label>
     </div>
 
 </div>
