--- a/A_dbms/templates/dbms/provide/modl/track-add-mod.html
+++ b/A_dbms/templates/dbms/provide/modl/track-add-mod.html
@@ -6,9 +6,9 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addTrackModalLabel">跟踪情况</h4>
+                <h4 class="modal-title" id="addTrackModalLabel">还款结算</h4>
                 <input style="display: none" name="provide_id" value="{{ provide_obj.id }}">
-                <input style="display: none" name="track_id" id="trackId">
+                <input style="display: none" name="track_id" id="addTrackModalId">
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
