--- a/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
@@ -42,7 +42,7 @@
             {% include 'dbms/provide/scan/tab/provide-fication.html' %} </div>
         <div role="presentation" class="tab-pane" id="extension"> <!--展期-->
             {% include 'dbms/provide/scan/tab/provide-extension.html' %} </div>
-        <div role="presentation" class="tab-pane" id="track"> <!--跟踪事项-->
+        <div role="presentation" class="tab-pane" id="track"> <!--还款计划-->
             {% include 'dbms/provide/scan/tab/provide-track.html' %} </div>
         <div role="presentation" class="tab-pane" id="compensatory"> <!--代偿-->
             {% include 'dbms/provide/scan/tab/provide-compensatory.html' %} </div>
